# cpp-stats

./: .gitignore  LICENSE  README.md  data.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  coverage.yml
cpp_stats/: analyzer.py  cpp_stats.py  main.py
cpp_stats/ast/: ast_tree.py
cpp_stats/metrics/: cognitive_complexity.py  lines_of_code.py  number_of_methods.py
docs/: METRICS.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0e76817a49871500_analyzer_py.html  z_0e76817a49871500_cpp_stats_py.html  z_0e76817a49871500_file_sieve_py.html  z_1acf256372e6d8ca_test_ast_tree_py.html  z_1acf256372e6d8ca_test_number_of_classes_py.html  z_882ac469af946d5d_lines_of_code_py.html  z_882ac469af946d5d_metric_calculator_py.html  z_882ac469af946d5d_number_of_classes_py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_analyzer_py.html  z_a44f0ac069e85531_test_cpp_stats_py.html  z_a44f0ac069e85531_test_file_sieve_py.html  z_a44f0ac069e85531_test_lines_of_code_py.html  z_a44f0ac069e85531_test_sample_py.html  z_aee55b7cdf71401b___init___py.html  z_aee55b7cdf71401b_asserts_py.html  z_aee55b7cdf71401b_clang_py.html  z_af3c17aa984abf22_ast_tree_py.html
reports/: 3d-renderer-report.xml  3d-renderer.md  cpp-dotenv-report.xml  cpp-dotenv.md
src/: main.py
src/cpp_stats/: __init__.py  analyzer.py  cpp_stats.py  file_sieve.py  language.py  main.py  metric.py  metric_calculator.py
tests/: conftest.py  test_analyzer.py  test_cpp_stats.py  test_file_sieve.py  test_lines_of_code.py
tests/clang/: test_camc.py  (+8 more)
(+89 files in other folders)
