[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cpp-stats"
version = "1.0.0"
authors = [
    { name = "Mikhail Getmanov" }
]
description = "Calculation of metrics for C/C++ repositories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clang==17.0.6",
    "click==8.1.8",
    "coverage==7.6.10",
    "pathlib==1.0.1",
    "pylint==3.3.4",
    "pytest==8.3.5"
]

[project.scripts]
cpp-stats = "cpp_stats.main:main"

[tool.setuptools.packages.find]
include = ["cpp_stats*"]
